--- a/vignettes/using-rnoaa.Rmd
+++ b/vignettes/using-rnoaa.Rmd
@@ -143,7 +143,7 @@ clean_data %>%
   theme_timeline()
 ```
 
-N.B.: The `size` aesthetic is not required.  Had it been omitted, the geom would label the last observations.
+N.B.: The `size` aesthetic is not required.  Had it been omitted, the geom would label the last observations:
 
 ```{r, fig.height = 5}
 # Quakes in Mexico from 1998 to 2005
