Includes a TOC for the README file

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,15 @@ knitr::opts_chunk$set(collapse = TRUE,
 [![Travis Build Status](https://travis-ci.org/Cesar-Urteaga/rnoaa.svg?branch=master)](https://travis-ci.org/Cesar-Urteaga/rnoaa)
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/Cesar-Urteaga/rnoaa?branch=master&svg=true)](https://ci.appveyor.com/project/Cesar-Urteaga/rnoaa)
 
+## Table of Contents
+
+* [Overview](#overview)
+* [Installation](#installation)
+* [Usage](#usage)
+* [Documentation](#documentation)
+* [Unit Testing](#unit-testing)
+* [Development Workflow](#development-workflow)
+
 ## Overview
 
 `rnoaa` is an [R](https://www.r-project.org/) package with a set of functions that makes easier to analyze the earthquake data provided by the [U.S. National Oceanic and Atmospheric Administration (NOAA)](http://www.noaa.gov/).
